# orderful-2.0

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0001_32caade008ac_create_users_table.py  0002_459e4ae7db55_create_products_table.py  0003_640758d55b18_create_orders_table.py  0004_2e219c56e981_create_categories_table.py  0005_ef94eee83101_insert_product_categories.py  0eb8eac444b9_create_orders_tables.py  1b193845792d_create_products_tables.py  6482f5531672_alter_fields_nullability.py  9d1aa1c4586b_extend_tables_with_extra_columns.py  a860c63f2706_make_article_unique.py  a9af9fde377c_create_categories_tables.py  c7cd9939a9e6_create_users_tables.py
orderful/: main.py
orderful/core/: connections.py  database.py  dependencies.py  events.py  security.py  settings.py
orderful/models/: __init__.py  associations.py  base.py  categories.py  orders.py  products.py  users.py
orderful/routers/: auth.py  authentication.py  orders.py  products.py  users.py
orderful/schemas/: orders.py  product_associations.py  products.py  users.py
orderful/scripts/: bootstrap.py
orderful/services/: associations_base.py  base.py  categories.py  orders.py  products.py  users.py
tests/: conftest.py  constants.py  factories.py  utils.py
tests/routers/: constants.py  test_auth.py  test_products.py  test_users.py
